# chu-sama

./: .gitignore  Directory.Build.props  README.md
Assets/: packages.config
Assets/Animation/: Muscle Animator Controller.controller  MuscleAttackBehaviour.cs  MuscleStartBehaviour.cs  Nomal Animator Controller.controller  NomalAttackBehaviour.cs  NomalDamaged.cs  NomalStartBehaviour.cs  Rock Animator Controller.controller  RockAttackBevior.cs  RockStartBehaviour.cs
Assets/Animations/: ProblemAnimation.cs
Assets/Resources/: 3DCamera.prefab
Assets/Samples/: LoadTextResourceSample.cs  PlayerController.cs  PlayerInputs.cs  PlayerInputs.inputactions
Assets/Scenes/: MahiroScene.unity  New Material.mat  New Prefab.prefab  SampleScene.unity  Sample_005339_08932_25_14.unity  StartScene.unity  bucket.unity
Assets/Scripts/: GameParameters.cs  NewBehaviourScript.cs  PlayerController.cs  RigidbodyEntity.cs  Text3D.cs
Assets/StreamingAssets/: .gitignore  pose.tflite
CSharpLab/: .gitignore  CSharpLab.sln  README.md  Untitled-1.ipynb
CSharpLab/.config/: dotnet-tools.json
CSharpLab/PoseClassifier/: App.xaml  App.xaml.cs  Classifier.cs  DataSource.cs  MainWindow.xaml  MainWindow.xaml.cs  Pose.cs  PoseClassifier.csproj  ViewModelBase.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
PythonLab/: .gitignore  README.md  fashion-mnist.ipynb  pose_classification.ipynb  pyproject.toml
PythonLab/pythonlab/: fashion-mnist.ipynb  pose_classification.ipynb  pose_data_viewer.py  pose_landmarker.ipynb  pose_model_maker.ipynb  pose_model_maker.py
(+134 files in other folders)
