[tool.poetry]
name = "pythonlab"
version = "0.1.0"
description = ""
authors = ["HotariTobu <hotari24tools@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
