[tool.poetry]
name = "pythonlab"
version = "0.1.0"
description = ""
authors = ["HotariTobu <hotari24tools@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.1"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
keras = "^3.3.3"
mediapipe = "^0.10.14"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
